--- a/styles/style.css
+++ b/styles/style.css
@@ -199,6 +199,7 @@ textarea {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    gap: 2rem;
 }
 
 .descuento__texto {
@@ -210,12 +211,11 @@ textarea {
 .descuento__texto::before {
     content: '';
     position: absolute;
-    height: 3rem;
+    height: 3.5rem;
     width: 2px;
     background-color: white;
     top: 0;
     left: -1.2rem;
-
 }
 
 .hero__icon {
@@ -397,4 +397,20 @@ textarea {
 
 .form__btn:hover {
     transform: scale(1.1);
+}
+
+/* FOOTER */
+
+.footer{
+    background-color: var(--color-terciario);
+    padding: 1rem 0;
+    text-align: center;
+    font-size: .8rem;
+    line-height: 1rem;
+    border-top: 1px solid var(--color-secundario);
+}
+
+.footer__text{
+    color: white;
+    margin: .3rem 0;
 }
