--- a/styles/style.css
+++ b/styles/style.css
@@ -410,6 +410,19 @@ textarea {
     border-top: 1px solid var(--color-secundario);
 }
 
+
+.footer__conteiner-icons{
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    margin: .5rem .5rem;
+}
+
+.footer__icons-icon{
+    width: 2rem;
+    height: 2rem;
+}
+
 .footer__text{
     color: white;
     margin: .3rem 0;
