--- a/styles/style.css
+++ b/styles/style.css
@@ -402,28 +402,60 @@ textarea {
 /* FOOTER */
 
 .footer{
+    position: relative;
     background-color: var(--color-terciario);
-    padding: 1rem 0;
+    padding: 1rem;
     text-align: center;
     font-size: .8rem;
-    line-height: 1rem;
-    border-top: 1px solid var(--color-secundario);
-}
-
-
-.footer__conteiner-icons{
     display: flex;
-    justify-content: center;
-    gap: 2rem;
-    margin: .5rem .5rem;
+    flex-direction: column;
+    gap: .5rem;
 }
 
-.footer__icons-icon{
-    width: 2rem;
-    height: 2rem;
+.footer::before {
+    content: '';
+    position: absolute;
+    top: 10px;
+    left: 70px;
+    border-top: 3px solid white;
+    border-left: 3px solid white;
+    height: 20px;
+    width: 20px;
+
+}
+
+.footer::after {
+    content: '';
+    position: absolute;
+    bottom: 10px;
+    right: 70px;
+    border-bottom: 3px solid white;
+    border-right: 3px solid white;
+    height: 20px;
+    width: 20px;
+}
+
+.footer__container-links {
+    display: flex;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
+.footer__icon {
+    font-size: 1.5rem;
+    color: white;
+    transition: all 250ms ease;
+}
+
+.footer__icon:hover {
+    transform: translateY(-5px);
 }
 
 .footer__text{
     color: white;
+    font-size: 1rem;
     margin: .3rem 0;
 }
