--- a/styles/productos.css
+++ b/styles/productos.css
@@ -212,7 +212,7 @@ textarea {
     justify-content: center;
     align-items: center;
     gap: 2rem;
-    background-color: rgb(226, 226, 226);
+    /* background-color: rgb(226, 226, 226); */
     border: 1px solid rgb(194, 194, 194);
     border-radius: 10px;
 }
