--- a/styles/style.css
+++ b/styles/style.css
@@ -252,7 +252,7 @@ textarea {
 }
 
 .container__product {
-    background-color: rgb(226, 226, 226);
+    background-color: #efefef;
     border: 1px solid rgb(194, 194, 194);
     border-radius: 10px;
     padding: 1rem;
