--- a/styles/style.css
+++ b/styles/style.css
@@ -251,7 +251,7 @@ textarea {
 
 }
 
-@media (max-width: 480px) {
+@media (min-width: 480px) {
     .grid__products{
         
         grid-template-columns: repeat(1, 1fr);
@@ -259,18 +259,28 @@ textarea {
     }
 }
 
-@media (max-width: 992px) {
+@media (min-width: 768px) {
     .grid__products{
         
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(2, 1fr);
     
     }
 }
 
-@media (max-width: 1200px) {
+@media (min-width: 992px) {
+    .grid__products{
+        
+        grid-template-columns: repeat(3, 1fr);
+        gap: 2rem;
+    
+    }
+}
+
+@media (min-width: 1200px) {
     .grid__products{
         
         grid-template-columns: repeat(4, 1fr);
+        gap: 3rem;
     
     }
 }
