--- a/styles/productos.css
+++ b/styles/productos.css
@@ -143,8 +143,8 @@ textarea {
 }
 
 .navbar__links.active {
-   display: flex;
-   z-index: 90;
+    display: flex;
+    z-index: 90;
 }
 
 .navbar__link {
@@ -259,6 +259,7 @@ textarea {
 .container__descripcion {
     display: flex;
     flex-direction: column;
+    align-items: center;
     padding: 1rem;
     text-align: center;
     gap: 1rem;
@@ -279,6 +280,17 @@ textarea {
     font-size: 1.8rem;
     font-weight: bold;
     color: var(--color-terciario);
+}
+
+.descripcion__comprar {
+    padding: .5rem 1rem;
+    width: 30%;
+    cursor: pointer;
+    background-color: var(--color-terciario);
+    color: white;
+    font-size: 1.2rem;
+    border-radius: 5px;
+    box-shadow: 0px 10px 20px -10px rgba(0, 0, 0, .4);
 }
 
 
