--- a/styles/productos.css
+++ b/styles/productos.css
@@ -4,203 +4,6 @@
     --color-terciario: #22503D;
 }
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-
-html {
-    scroll-behavior: smooth;
-    scrollbar-color: var(--color-terciario) transparent;
-}
-
-body {
-    display: flex;
-    flex-direction: column;
-    font-family: "Libertinus Serif", serif;
-    overflow-x: hidden;
-}
-
-a {
-    text-decoration: none;
-    color: inherit;
-}
-
-ul {
-    list-style: none;
-}
-
-li {
-    list-style: none;
-}
-
-img {
-    max-width: 100%;
-    height: auto;
-    display: block;
-}
-
-form,
-fieldset,
-legend,
-label,
-input,
-textarea {
-    margin: 0;
-    padding: 0;
-    border: none;
-    background: none;
-    font: inherit;
-    color: inherit;
-    box-sizing: border-box;
-}
-
-input,
-textarea {
-    width: 100%;
-    outline: none;
-    background: transparent;
-    resize: none;
-}
-
-/* GLOBALES */
-
-.subtitle {
-    font-size: 3rem;
-    text-align: center;
-    color: var(--color-terciario);
-    border-bottom: 2px solid var(--color-terciario);
-}
-
-.sub-subtitle {
-    font-size: 1rem;
-    text-align: center;
-    color: rgb(68, 68, 68);
-}
-
-.container {
-    max-width: 1400px;
-    width: 90%;
-    margin: 0 auto;
-}
-
-/* HEADER */
-.header {
-    width: 100%;
-    position: sticky;
-    top: 0;
-    z-index: 50;
-    background-color: rgba(255, 255, 255, 0.9);
-    backdrop-filter: blur(10px);
-}
-
-.header__envio {
-    background-color: black;
-    padding: .5rem;
-}
-
-.header__texto {
-    color: white;
-    font-size: 1rem;
-    text-align: center;
-}
-
-.header__navbar {
-    position: relative;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: .4rem;
-    background-color: white;
-    border-bottom: 2px solid var(--color-terciario);
-}
-
-.hamburguesa {
-    cursor: pointer;
-    z-index: 70;
-}
-
-.navbar__links {
-    position: absolute;
-    top: 0;
-    padding: 2rem;
-    right: 0;
-    display: none;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 5rem;
-    z-index: 70;
-    background-color: var(--color-primario);
-    box-shadow: 0px 30px 50px 30px rgba(0, 0, 0, .4);
-    border-left: .6px solid var(--color-terciario);
-    height: 100vh;
-    width: 80vw;
-    transition: all 250ms ease;
-}
-
-.navbar__links.active {
-    display: flex;
-    z-index: 90;
-}
-
-.navbar__link {
-    font-size: 1.8rem;
-    padding: 1rem;
-    border-radius: 15px;
-    transition: all 250ms ease;
-}
-
-.navbar__link:hover {
-    background-color: var(--color-secundario);
-}
-
-.navbar__container-logo {
-    color: var(--color-terciario);
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    max-width: 50px;
-}
-
-.navbar__title {
-    font-size: 1.5rem;
-    font-weight: bold;
-}
-
-.navbar__container-icons {
-    color: var(--color-terciario);
-    display: flex;
-    gap: 1rem;
-}
-
-.icons-zindex {
-    z-index: 60;
-}
-
-.container-icons__icon {
-    font-size: 1.2rem;
-}
-
-.navbar__close {
-    cursor: pointer;
-    opacity: 0;
-    position: absolute;
-    top: 30px;
-    left: 110px;
-    z-index: 100;
-    font-size: 1.8rem;
-    color: var(--color-terciario);
-}
-
-.navbar__close.active {
-    opacity: 1;
-}
-/* MAIN */
-
 .main {
     padding: 6rem 0;
 }
@@ -298,63 +101,18 @@ textarea {
     transform: scale(1.1);
 }
 
+@media (min-width: 1200px) {    
+    .container-img__principal {
+        max-width: 500px;
+        margin: 0 auto;
+    }
 
-/* FOOTER */
+    .main__container {
+        max-width: 800px;
+        margin: 0 auto;
+    }
 
-.footer{
-    position: relative;
-    background-color: var(--color-terciario);
-    padding: 1rem;
-    text-align: center;
-    font-size: .8rem;
-    display: flex;
-    flex-direction: column;
-    gap: .5rem;
-}
-
-.footer::after {
-    content: '';
-    position: absolute;
-    top: 10px;
-    left: 70px;
-    border-top: 3px solid white;
-    border-left: 3px solid white;
-    height: 20px;
-    width: 20px;
-}
-
-.footer::before {
-    content: '';
-    position: absolute;
-    bottom: 10px;
-    right: 70px;
-    border-bottom: 3px solid white;
-    border-right: 3px solid white;
-    height: 20px;
-    width: 20px;
-}
-
-.footer__container-links {
-    display: flex;
-    gap: 1rem;
-    justify-content: center;
-    align-items: center;
-}
-
-
-
-.footer__icon {
-    font-size: 1.5rem;
-    color: white;
-    transition: all 250ms ease;
-}
-
-.footer__icon:hover {
-    transform: translateY(-5px);
-}
-
-.footer__text{
-    color: white;
-    font-size: 1rem;
-    margin: .3rem 0;
+    .container-img__secundarias {
+        justify-content: center;
+    }
 }
