--- a/styles/style.css
+++ b/styles/style.css
@@ -1,42 +1,42 @@
 :root {
-  --color-primario: #ceeade;
-  --color-secundario: #4aad84;
-  --color-terciario: #22503d;
+	--color-primario: #ceeade;
+	--color-secundario: #4aad84;
+	--color-terciario: #22503d;
 }
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 html {
-  scroll-behavior: smooth;
-  scrollbar-color: var(--color-terciario) transparent;
+	scroll-behavior: smooth;
+	scrollbar-color: var(--color-terciario) transparent;
 }
 
 body {
-  font-family: "Libertinus Serif", serif;
-  overflow-x: hidden;
+	font-family: "Libertinus Serif", serif;
+	overflow-x: hidden;
 }
 
 a {
-  text-decoration: none;
-  color: inherit;
+	text-decoration: none;
+	color: inherit;
 }
 
 ul {
-  list-style: none;
+	list-style: none;
 }
 
 li {
-  list-style: none;
+	list-style: none;
 }
 
 img {
-  max-width: 100%;
-  height: auto;
-  display: block;
+	max-width: 100%;
+	height: auto;
+	display: block;
 }
 
 form,
@@ -45,156 +45,155 @@ legend,
 label,
 input,
 textarea {
-  margin: 0;
-  padding: 0;
-  border: none;
-  background: none;
-  font: inherit;
-  color: inherit;
-  box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	border: none;
+	background: none;
+	font: inherit;
+	box-sizing: border-box;
 }
 
 input,
 textarea {
-  width: 100%;
-  outline: none;
-  background: transparent;
-  resize: none;
+	width: 100%;
+	outline: none;
+	background: transparent;
+	resize: none;
 }
 
 /* GLOBALES */
 
 .subtitle {
-  font-size: 3rem;
-  text-align: center;
-  color: var(--color-terciario);
-  border-bottom: 2px solid var(--color-terciario);
+	font-size: 3rem;
+	text-align: center;
+	color: var(--color-terciario);
+	/* border-bottom: 2px solid var(--color-terciario); */
 }
 
 .sub-subtitle {
-  font-size: 1rem;
-  text-align: center;
-  color: rgb(68, 68, 68);
+	font-size: 1rem;
+	text-align: center;
+	color: rgb(68, 68, 68);
 }
 
 .container {
-  max-width: 1400px;
-  width: 90%;
-  margin: 0 auto;
+	max-width: 1400px;
+	width: 90%;
+	margin: 0 auto;
 }
 
 /* HEADER */
 .header {
-  width: 100%;
-  position: sticky;
-  top: 0;
-  z-index: 50;
-  background-color: rgba(255, 255, 255, 0.9);
-  backdrop-filter: blur(10px);
+	width: 100%;
+	position: sticky;
+	top: 0;
+	z-index: 50;
+	background-color: rgba(255, 255, 255, 0.9);
+	backdrop-filter: blur(10px);
 }
 
 .header__envio {
-  background-color: black;
-  padding: 0.5rem;
+	background-color: black;
+	padding: 0.5rem;
 }
 
 .header__texto {
-  color: white;
-  font-size: 1rem;
-  text-align: center;
+	color: white;
+	font-size: 1rem;
+	text-align: center;
 }
 
 .header__navbar {
-  position: relative;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0.4rem;
-  background-color: white;
-  border-bottom: 2px solid var(--color-terciario);
+	position: relative;
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 0.4rem;
+	background-color: white;
+	border-bottom: 2px solid var(--color-terciario);
 }
 
 .hamburguesa {
-  cursor: pointer;
-  z-index: 70;
+	cursor: pointer;
+	z-index: 70;
 }
 
 .navbar__links {
-  position: absolute;
-  top: 0;
-  padding: 2rem;
-  right: 0;
-  display: none;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 5rem;
-  z-index: 70;
-  background-color: var(--color-primario);
-  box-shadow: 0px 30px 50px 30px rgba(0, 0, 0, 0.4);
-  border-left: 0.6px solid var(--color-terciario);
-  height: 100vh;
-  width: 80vw;
-  transition: all 250ms ease;
+	position: absolute;
+	top: 0;
+	padding: 2rem;
+	right: 0;
+	display: none;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	gap: 5rem;
+	z-index: 70;
+	background-color: var(--color-primario);
+	box-shadow: 0px 30px 50px 30px rgba(0, 0, 0, 0.4);
+	border-left: 0.6px solid var(--color-terciario);
+	height: 100vh;
+	width: 80vw;
+	transition: all 250ms ease;
 }
 
 .navbar__links.active {
-  display: flex;
-  z-index: 90;
+	display: flex;
+	z-index: 90;
 }
 
 .navbar__link {
-  font-size: 1.8rem;
-  padding: 1rem;
-  border-radius: 15px;
-  transition: all 250ms ease;
+	font-size: 1.8rem;
+	padding: 1rem;
+	border-radius: 15px;
+	transition: all 250ms ease;
 }
 
 .navbar__link:hover {
-  background-color: var(--color-secundario);
+	background-color: var(--color-secundario);
 }
 
 .navbar__container-logo {
-  color: var(--color-terciario);
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-  max-width: 50px;
+	color: var(--color-terciario);
+	display: flex;
+	align-items: center;
+	gap: 1rem;
+	max-width: 50px;
 }
 
 .navbar__title {
-  font-size: 1.5rem;
-  font-weight: bold;
+	font-size: 1.5rem;
+	font-weight: bold;
 }
 
 .navbar__container-icons {
-  color: var(--color-terciario);
-  display: flex;
-  gap: 1rem;
+	color: var(--color-terciario);
+	display: flex;
+	gap: 1rem;
 }
 
 .icons-zindex {
-  z-index: 60;
+	z-index: 60;
 }
 
 .container-icons__icon {
-  font-size: 1.2rem;
+	font-size: 1.2rem;
 }
 
 .navbar__close {
-  cursor: pointer;
-  opacity: 0;
-  position: absolute;
-  top: 30px;
-  left: 110px;
-  z-index: 100;
-  font-size: 1.8rem;
-  color: var(--color-terciario);
+	cursor: pointer;
+	opacity: 0;
+	position: absolute;
+	top: 30px;
+	left: 110px;
+	z-index: 100;
+	font-size: 1.8rem;
+	color: var(--color-terciario);
 }
 
 .navbar__close.active {
-  opacity: 1;
+	opacity: 1;
 }
 
 /* MAIN */
@@ -202,431 +201,287 @@ textarea {
 /* HERO */
 
 .hero__descuento {
-  color: white;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  padding: 1rem;
-  height: 30vh;
-  background-image: linear-gradient(
-      to top,
-      rgba(0, 0, 0, 0.5),
-      rgba(0, 0, 0, 0.6)
-    ),
-    url("../assets/hero-content2.avif");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  gap: 2rem;
+	color: white;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	padding: 1rem;
+	height: 30vh;
+	background-image: linear-gradient(to top,
+			rgba(0, 0, 0, 0.5),
+			rgba(0, 0, 0, 0.6)),
+		url("../assets/hero-content2.avif");
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	gap: 2rem;
 }
 
 .descuento__texto {
-  font-size: 1.3rem;
-  text-align: left;
-  position: relative;
+	font-size: 1.3rem;
+	text-align: left;
+	position: relative;
 }
 
 .descuento__texto::before {
-  content: "";
-  position: absolute;
-  height: 4.5rem;
-  width: 2px;
-  background-color: white;
-  top: 0;
-  left: -20px;
+	content: "";
+	position: absolute;
+	height: 4.5rem;
+	width: 2px;
+	background-color: white;
+	top: 0;
+	left: -20px;
 }
 
 .hero__icon {
-  font-size: 2.5rem;
+	font-size: 2.5rem;
 }
 
 /* GRID */
 .grid {
-  padding: 4rem 0;
+	padding: 4rem 0;
 }
 
 .grid__products {
-  padding: 2rem 0;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 1rem;
+	padding: 2rem 0;
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	gap: 1rem;
 }
 
 .container__product {
-  background-color: #efefef;
-  border: 1px solid rgb(194, 194, 194);
-  border-radius: 10px;
-  padding: 1rem;
-  height: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  cursor: pointer;
-  transition: all 250ms ease;
+	background-color: #efefef;
+	border: 1px solid rgb(194, 194, 194);
+	border-radius: 10px;
+	padding: 1rem;
+	height: auto;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+	cursor: pointer;
+	transition: all 250ms ease;
 }
 
 .container__product:hover {
-  transform: scale(1.03);
+	transform: scale(1.03);
 }
 
 .product__info {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  gap: 1rem;
-  margin-top: 1rem;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-between;
+	gap: 1rem;
+	margin-top: 1rem;
 }
 
 .info__price {
-  font-size: 1.8rem;
-  font-weight: bold;
-  color: var(--color-terciario);
+	font-size: 1.8rem;
+	font-weight: bold;
+	color: var(--color-terciario);
 }
 
 .info__btn {
-  padding: 0.3rem 0.8rem;
-  background-color: var(--color-terciario);
-  color: white;
-  border-radius: 10px;
-  font-size: 1.1rem;
-  transition: all 250ms ease;
+	padding: 0.3rem 0.8rem;
+	background-color: var(--color-terciario);
+	color: white;
+	border-radius: 10px;
+	font-size: 1.1rem;
+	transition: all 250ms ease;
 }
 
 .info__btn:hover {
-  transform: scale(1.1);
+	transform: scale(1.1);
 }
 
 .product__container-img {
-  max-width: 100%;
-  height: auto;
-  margin: 0 auto;
-  border-bottom: 2px solid var(--color-terciario);
+	max-width: 100%;
+	height: auto;
+	margin: 0 auto;
+	border-bottom: 2px solid var(--color-terciario);
 }
 
 .container-img__imagen {
-  margin-bottom: 1rem;
+	margin-bottom: 1rem;
 }
 
-/* FORM */
-
-.form {
-  padding: 4rem 0;
-}
-
-.form__subtitle {
-  margin-bottom: 3rem;
-}
-
-.form__form {
-  padding: 1rem;
-  margin: 0 auto;
-  border: 1px solid var(--color-terciario);
-  border-radius: 10px;
-  /* height: 500px; */
-}
-
-.form__fieldset {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: start;
-  gap: 2rem;
-}
-
-.form__legend {
-  font-size: 1.5rem;
-  font-weight: bold;
-  margin-bottom: 0.8rem;
-  color: var(--color-terciario);
-  position: relative;
-}
-
-.form__legend-datos::before {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  height: 1px;
-  width: 190px;
-  background-color: var(--color-terciario);
-}
-
-.form__legend-contact::before {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  height: 1px;
-  width: 100px;
-  background-color: var(--color-terciario);
-}
-
-.form__label {
-  font-size: 1.2rem;
-  margin-bottom: 0.3rem;
-}
-
-.form__input {
-  width: 75%;
-  border: 1px solid var(--color-terciario);
-  border-radius: 10px;
-  padding: 0.3rem;
-  background-color: white;
-}
-
-.form__container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 1rem;
-}
-
-.form__personal-contacts-container,
-.form__contact-container {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  gap: 1rem;
-}
-
-.form__btns {
-  margin-top: 1rem;
-  display: flex;
-  gap: 1rem;
-}
-
-.form_btn {
-  padding: 0.5rem 1rem;
-  background-color: var(--color-terciario);
-  font-size: 1.1rem;
-  border-radius: 5px;
-  color: white;
-  transition: all 250ms ease;
-}
-
-.form_btn-clear {
-  background-color: white;
-  color: var(--color-terciario);
-  border: 1px solid var(--color-terciario);
-}
-
-.form__btn:hover {
-  transform: scale(1.1);
-}
 
 /* FOOTER */
 
 .footer {
-  position: relative;
-  background-color: var(--color-terciario);
-  padding: 1rem;
-  text-align: center;
-  font-size: 0.8rem;
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
-}
-
-.footer::after {
-  content: "";
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  border-top: 3px solid white;
-  border-left: 3px solid white;
-  height: 20px;
-  width: 20px;
-}
-
-.footer::before {
-  content: "";
-  position: absolute;
-  bottom: 10px;
-  right: 10px;
-  border-bottom: 3px solid white;
-  border-right: 3px solid white;
-  height: 20px;
-  width: 20px;
+	position: relative;
+	background-color: var(--color-terciario);
+	padding: 1rem;
+	text-align: center;
+	font-size: 0.8rem;
+	display: flex;
+	flex-direction: column;
+	gap: 0.5rem;
 }
 
 .footer__container-links {
-  display: flex;
-  gap: 1rem;
-  justify-content: center;
-  align-items: center;
+	display: flex;
+	gap: 1rem;
+	justify-content: center;
+	align-items: center;
 }
 
 .footer__icon {
-  font-size: 1.5rem;
-  color: white;
-  transition: all 250ms ease;
+	font-size: 1.5rem;
+	color: white;
+	transition: all 250ms ease;
 }
 
 .footer__icon:hover {
-  transform: translateY(-5px);
+	transform: translateY(-5px);
 }
 
 .footer__text {
-  color: white;
-  font-size: 1rem;
-  margin: 0.3rem 0;
+	color: white;
+	font-size: 1rem;
+	margin: 0.3rem 0;
 }
 
 /* 480px */
 
 @media (min-width: 480px) {
-  .grid__products {
-    grid-template-columns: repeat(1, 1fr);
-  }
+	.grid__products {
+		grid-template-columns: repeat(1, 1fr);
+	}
 }
 
 /* 768px */
 
 @media (min-width: 768px) {
-  .grid__products {
-    grid-template-columns: repeat(2, 1fr);
-  }
+	.grid__products {
+		grid-template-columns: repeat(2, 1fr);
+	}
 }
 
 /* 992px */
 
 @media (min-width: 992px) {
-  .grid__products {
-    grid-template-columns: repeat(3, 1fr);
-    gap: 2rem;
-  }
+	.grid__products {
+		grid-template-columns: repeat(3, 1fr);
+		gap: 2rem;
+	}
 }
 
 /* 1200px */
 @media (min-width: 1200px) {
-  /* Navbar */
-  .hamburguesa {
-    display: none;
-  }
 
-  .container-navbar {
-    background-color: white;
-    width: 100%;
-    padding: 1rem 0;
-    border-bottom: 2px solid var(--color-terciario);
-  }
+	/* Navbar */
+	.hamburguesa {
+		display: none;
+	}
 
-  .navbar__links.active {
-    display: none;
-    z-index: 90;
-  }
+	.container-navbar {
+		background-color: white;
+		width: 100%;
+		padding: .4rem 0;
+		border-bottom: 2px solid var(--color-terciario);
+	}
 
-  .header__navbar {
-    max-width: 1400px;
-    margin: 0 auto;
-    position: static;
-    display: flex;
-    border: none;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0;
-    background-color: white;
-  }
+	.navbar__links.active {
+		display: none;
+		z-index: 90;
+	}
 
-  .navbar__links {
-    padding: 0;
-    position: static;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    gap: 1rem;
-    z-index: 70;
-    background-color: white;
-    box-shadow: none;
-    border-left: none;
-    height: auto;
-    width: auto;
-    transition: all 250ms ease;
-  }
+	.header__navbar {
+		max-width: 1400px;
+		margin: 0 auto;
+		position: static;
+		display: flex;
+		border: none;
+		justify-content: space-between;
+		align-items: center;
+		padding: 0;
+		background-color: white;
+	}
 
-  .navbar__link {
-    font-size: 1.5rem;
-    padding: 0.5rem 1rem;
-    border-radius: 15px;
-    transition: all 250ms ease;
-  }
+	.navbar__links {
+		padding: 0;
+		position: static;
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+		justify-content: space-between;
+		gap: 1rem;
+		z-index: 70;
+		background-color: white;
+		box-shadow: none;
+		border-left: none;
+		height: auto;
+		width: auto;
+		transition: all 250ms ease;
+	}
 
-  .navbar__container-logo {
-    color: var(--color-terciario);
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    max-width: 60px;
-  }
+	.navbar__link {
+		font-size: 1.4rem;
+		padding: 0.5rem 1rem;
+		border-radius: 15px;
+		transition: all 250ms ease;
+	}
 
-  .navbar__container-icons {
-    display: none;
-  }
+	.navbar__container-logo {
+		color: var(--color-terciario);
+		display: flex;
+		align-items: center;
+		gap: 1rem;
+		max-width: 60px;
+	}
 
-  /* Hero */
+	.navbar__container-icons {
+		display: none;
+	}
 
-  .hero__descuento {
-    height: 60vh;
-    justify-content: center;
-    gap: 4rem;
-  }
+	/* Hero */
 
-  .hero__icon {
-    font-size: 3.5rem;
-  }
+	.hero__descuento {
+		height: 60vh;
+		justify-content: center;
+		gap: 4rem;
+	}
 
-  .descuento__texto {
-    font-size: 2rem;
-  }
+	.hero__icon {
+		font-size: 3.5rem;
+	}
 
-  .descuento__texto::before {
-    left: -35px;
-  }
+	.descuento__texto {
+		font-size: 2rem;
+	}
 
-  /* Grid */
-  .grid__products {
-    grid-template-columns: repeat(4, 1fr);
-    gap: 3rem;
-  }
+	.descuento__texto::before {
+		left: -35px;
+	}
 
-  /* Form */
-  .form__btns {
-    margin: 0 auto;
-  }
+	/* Grid */
+	.grid__products {
+		grid-template-columns: repeat(4, 1fr);
+		gap: 3rem;
+	}
+	/* FOOTER */
 
-  .form__fieldset {
-    justify-content: center;
-    align-items: center;
-    max-width: 50%;
-    margin: 0 auto;
-    border: 1px solid var(--color-terciario);
-    padding: 1.5rem;
-    border-radius: 30px;
-  }
+	.footer {
+		font-size: 1rem;
+		flex-direction: row;
+		justify-content: space-between;
+		align-items: center;
+		background-color: var(--color-terciario);
+	}
 
-  .form__form {
-    border: none;
-  }
+	.footer__container-text {
+		display: flex;
+		gap: .5rem;
+		flex-direction: column;
+		align-items: end;
+		justify-content: center;
+	}
 
-  .subtitle {
-    border-bottom: none;
-  }
-
-  /* FOOTER */
-
-  .footer {
-    font-size: 1rem;
-    flex-direction: row;
-    padding: 2rem;
-    justify-content: space-between;
-  }
-
-  .footer__container-text {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+	.footer__container {
+		display: flex;
+		flex-direction: column;
+		gap: 1rem;
+	}
 }
