--- a/styles/login.css
+++ b/styles/login.css
@@ -4,19 +4,29 @@
 	--color-terciario: #22503d;
 }
 body {
-    overflow-y: hidden;
+    overflow-y: hidden; 
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    justify-content: center;
 }
 
 .main {
     padding: 6rem 0;
+    flex-grow: 1;
 }
 
 .main__titulo {
-    font-size: 2rem;
+    font-size: 2.5rem;
     margin: 0 auto;
-    margin-bottom: 1rem;
+    margin-bottom: 5rem;
     text-align: center;
     color: var(--color-terciario);
+}
+
+.login__container {
+
+    margin: 0 auto;
 }
 
 .login__form {
@@ -50,14 +60,14 @@ body {
 }
 
 .login__btn {
-    padding: .6rem 1.1rem;
+    display: inline-block;
+    margin: 0 auto;
     background-color: var(--color-terciario);
     color: white;
+    padding: .8rem 1.5rem;
+    text-decoration: none;
     border-radius: 10px;
-    border: none;
-    font-size: 1.3rem;
-    width: 200px;
-    margin: 0 auto;
+    font-size: 1.5rem;
 }
 
 .login__crear-cuenta {
@@ -67,4 +77,15 @@ body {
     font-size: 1.2rem;
     text-decoration: underline;
     color: gray;
+}
+
+
+@media (min-width: 1200px) {
+    .login__container {
+        max-width: 30rem;
+    }
+
+    .main__titulo {
+        font-size: 3rem;
+    }
 }
