--- a/styles/style.css
+++ b/styles/style.css
@@ -119,9 +119,6 @@ textarea {
 	z-index: 70;
 }
 
-.modo-oscuro {
-
-}
 
 .navbar__links {
 	position: absolute;
@@ -191,7 +188,7 @@ textarea {
 	opacity: 0;
 	position: absolute;
 	top: 30px;
-	left: 110px;
+	left: 30px;
 	z-index: 100;
 	font-size: 1.8rem;
 	color: var(--color-terciario);
@@ -322,8 +319,8 @@ tbody td {
 	height: 4.5rem;
 	width: 2px;
 	background-color: white;
-	top: 0;
-	left: -20px;
+	top: -10px;
+	left: -50px;
 }
 
 .hero__icon {
@@ -617,7 +614,8 @@ tbody td {
 	}
 
 	.descuento__texto::before {
-		left: -35px;
+		left: -40px;
+		top: -6px;
 	}
 
 	/* Grid */
