--- a/styles/login.css
+++ b/styles/login.css
@@ -4,41 +4,46 @@
 	--color-terciario: #22503d;
 }
 body {
-    overflow-y: hidden; 
     display: flex;
     flex-direction: column;
-    height: 100vh;
-    justify-content: center;
+    min-height: 100vh;
+    overflow-y: auto;
+}
+
+.header {
+    position: relative;
 }
 
 .main {
-    padding: 6rem 0;
+    padding: 1rem 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     flex-grow: 1;
 }
 
 .main__titulo {
-    font-size: 2.5rem;
+    font-size: 2rem;
     margin: 0 auto;
-    margin-bottom: 5rem;
     text-align: center;
     color: var(--color-terciario);
+    margin-bottom: 1rem;
 }
 
-.login__container {
-
-    margin: 0 auto;
-}
 
 .login__form {
-    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
     border: 1px solid var(--color-terciario);
     padding: 1rem;
     border-radius: 10px;
-    /* height: 300px; */
-    display: flex;
-    gap: 3rem;
-    flex-direction: column;
+    max-width: 500px;
+    margin: 0 auto;
+    width: 100%;
 }
+
 
 .login__account {
     display: flex;
@@ -48,9 +53,9 @@ body {
 
 .login__input{
     border: 1px solid var(--color-terciario) !important;
-    padding: 1rem;
+    padding: .7rem;
     border-radius: 10px;
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 
 .login__btns {
@@ -64,28 +69,39 @@ body {
     margin: 0 auto;
     background-color: var(--color-terciario);
     color: white;
-    padding: .8rem 1.5rem;
+    padding: .6rem 1.3rem;
     text-decoration: none;
     border-radius: 10px;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
 }
 
 .login__crear-cuenta {
     margin: 0 auto;
     /* background-color: red; */
-    padding: 1rem;
-    font-size: 1.2rem;
+    padding: .5rem;
+    font-size: 1.1rem;
     text-decoration: underline;
     color: gray;
 }
 
 
 @media (min-width: 1200px) {
-    .login__container {
-        max-width: 30rem;
+    .login__form {
+        max-width: 25rem;
+        height: 15rem;
     }
 
     .main__titulo {
         font-size: 3rem;
+        margin-bottom: 2rem;
     }
+
+    .main {
+        height: 100%;
+    }
+
+    .login__form {
+        justify-content: space-between;
+    }
+
 }
