--- a/styles/register.css
+++ b/styles/register.css
@@ -4,12 +4,27 @@
     --color-terciario: #22503d;
 }
 
+
+.header {
+    position: relative;
+}
+
+.main {
+    padding: 1rem 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex-grow: 1;
+}
+
 .form {
     padding: 4rem 0;
 }
 
 .form__subtitle {
-    margin-bottom: 3rem;
+    margin-bottom: 1rem;
+    font-size: 2rem;
 }
 
 .form__form {
@@ -151,7 +166,7 @@
     }
 
     .subtitle {
-        border-bottom: none;
+        font-size: 3rem;
     }
 
     .form__btns {
