--- a/styles/style.css
+++ b/styles/style.css
@@ -18,6 +18,7 @@ html {
 body {
 	font-family: "Libertinus Serif", serif;
 	overflow-x: hidden;
+	z-index: 1;
 }
 
 a {
@@ -85,9 +86,9 @@ textarea {
 /* HEADER */
 .header {
 	width: 100%;
-	position: sticky;
+	position: fixed;
 	top: 0;
-	z-index: 50;
+	z-index: 1000;
 	background-color: rgba(255, 255, 255, 0.9);
 	backdrop-filter: blur(10px);
 }
@@ -104,7 +105,7 @@ textarea {
 }
 
 .header__navbar {
-	position: relative;
+	position: absolute;
 	width: 100%;
 	display: flex;
 	justify-content: space-between;
@@ -164,7 +165,7 @@ textarea {
 }
 
 .navbar__title {
-	font-size: 1.5rem;
+	font-size: 1.2rem;
 	font-weight: bold;
 }
 
@@ -199,14 +200,14 @@ textarea {
 }
 
 .carrito-container {
-	z-index: 999;
+	z-index: 99;
 	max-height: 900px;
 	overflow-y: scroll;
 	display: none;
-	padding: 2rem;
-	position: absolute;
-	top: 100px ;
-	left: 30px ;
+	padding: 1rem;
+	position: fixed;
+	top: 100px;
+	left: 30px;
 	min-height: 10rem;
 	height: auto;
 	border: 2px solid var(--color-terciario);
@@ -215,66 +216,77 @@ textarea {
 	background-color: white;
 }
 
-table {
-	margin-bottom: 1rem;
-}
-
-table tr {
-	margin-bottom: 1rem;
-}
-
-tbody {
-	padding: 2rem;
-}
-
-
-
-tbody td {
-	width: 20%;
-	height: 6rem;
-	text-align: center;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	margin-top: 1rem;
-}
 
 .carrito-container.active {
 	display: block;
-	z-index: 9;
+	z-index: 100;
 }
 
-.carrito-container tr {
-	display: flex;
-	justify-content: space-between;
-}
-
-
-.td-nombre {
-	font-size: 1rem;
-}
-
-.td-precio,
-.td-cantidad {
-	font-size: 1.5rem;
-	font-weight: bold;
-}
-
-.carrito-container table {
-	width: 100%;
-}
-
-.carrito-container th {
-	font-size: 1.5rem;
-	border-bottom: 1px solid gray;
-	padding-bottom: .5rem;
+table {
 	display: flex;
 	flex-direction: column;
-	align-items: center;
-	justify-content: space-between;
+	gap: 1rem;
+	text-align: left;
 	width: 100%;
 
 }
+
+table thead {
+	display: grid;
+	grid-template-columns: 2fr 3fr 1fr 1fr;
+	gap: 5px;
+	justify-items: center;
+	justify-content: center;
+	border-bottom: 1px solid #777777;
+}
+
+table thead tr {
+	display: contents;
+}
+
+
+
+table thead tr th {
+	text-align: center;
+	font-weight: 600;
+	padding: .3rem;
+	font-size: .9rem;
+
+}
+
+table tbody {
+	display: grid;
+	grid-template-columns: 2fr 3fr 1fr 1fr;
+	justify-items: center;
+	justify-content: center;
+	gap: 1rem;
+	align-items: center;
+	align-content: center;
+	padding: .5rem 0;
+}
+
+table tbody tr {
+
+	display: contents;
+
+
+}
+
+table tbody tr td {
+	padding: .1rem;
+}
+
+.td-imagen img {
+	max-width: 70px;
+	height: auto;
+	display: block;
+	margin: 0 auto;
+}
+
+.td-nombre {
+	text-align: left;
+}
+
 
 .vaciar-carrito-btn {
 	padding: .8rem 1.5rem;
@@ -283,6 +295,13 @@ tbody td {
 	color: white;
 	display: inline-block;
 	margin: 0 auto;
+	width: 100%;
+	text-align: center;
+	transition: all 250ms ease;
+}
+
+.vaciar-carrito-btn:hover {
+	background-color: rgb(143, 1, 1);
 }
 
 
@@ -333,10 +352,10 @@ tbody td {
 }
 
 .grid__products {
-	padding: 2rem 0;
+	padding: 3rem 1rem;
 	display: grid;
-	grid-template-columns: repeat(2, 1fr);
-	gap: 1rem;
+	grid-template-columns: repeat(1, 1fr);
+	gap: 2rem;
 }
 
 .container__product {
@@ -374,12 +393,15 @@ tbody td {
 }
 
 .info__btn {
-	padding: .8rem 1.5rem;
+	padding: 1rem;
 	background-color: var(--color-terciario);
 	color: white;
 	border-radius: 10px;
 	font-size: 1.3rem;
 	transition: all 250ms ease;
+	width: 100%;
+	display: block;
+	text-align: center;
 }
 
 .info__btn:hover {
@@ -440,7 +462,7 @@ tbody td {
 	cursor: pointer;
 }
 
-.modo-oscuro-general {	
+.modo-oscuro-general {
 	background-color: rgb(0, 0, 0);
 }
 
@@ -449,18 +471,18 @@ tbody td {
 }
 
 .card-oscuro {
-    background-color: rgb(22, 22, 22); 
-    border: 1px solid var(--color-primario);
+	background-color: rgb(22, 22, 22);
+	border: 1px solid var(--color-primario);
 }
 
 .card-oscuro .info__titulo,
 .card-oscuro .info__price {
-    color: var(--color-primario); 
+	color: var(--color-primario);
 }
 
 .card-oscuro .info__btn {
-    background-color: #4aad84;
-    color: white;
+	background-color: #4aad84;
+	color: white;
 }
 
 .card-oscuro .product__container-img {
@@ -497,7 +519,7 @@ tbody td {
 
 @media (min-width: 768px) {
 	.grid__products {
-		grid-template-columns: repeat(2, 1fr);
+		grid-template-columns: repeat(1, 1fr);
 	}
 }
 
@@ -505,7 +527,7 @@ tbody td {
 
 @media (min-width: 992px) {
 	.grid__products {
-		grid-template-columns: repeat(3, 1fr);
+		grid-template-columns: repeat(2, 1fr);
 		gap: 2rem;
 	}
 }
@@ -513,9 +535,11 @@ tbody td {
 /* 1200px */
 @media (min-width: 1200px) {
 
+
 	.subtitle {
 		font-size: 4rem;
 	}
+
 	/* Navbar */
 	.hamburguesa {
 		display: none;
@@ -591,11 +615,29 @@ tbody td {
 	/* Carrito */
 	.carrito-container {
 		top: 100px;
-		left: 1091px;
+		left: 840px;
 		max-width: 800px;
+		max-height: 800px;
 	}
 
+	table thead tr th {
+		font-size: 1.5rem;
+	}
 
+	.td-nombre {
+		font-size: 1.2rem;
+	}
+
+	.td-precio,
+	.td-cantidad {
+		font-size: 1.7rem;
+		font-weight: bold;
+	}
+
+	.td-imagen img {
+		max-width: 100px;
+		height: auto;
+	}
 
 	/* Hero */
 
