--- a/styles/register.css
+++ b/styles/register.css
@@ -58,23 +58,18 @@ body {
 
 .form__label {
     font-size: 1.2rem;
+    flex: 0 0 auto;
     margin-bottom: 0.3rem;
 }
 
 .form__input {
-    width: 75%;
+    flex: 1;
     border: 1px solid var(--color-terciario);
     border-radius: 10px;
     padding: 0.3rem;
     background-color: white;
 }
 
-.form__container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 1rem;
-}
 
 .form__personal-contacts-container,
 .form__contact-container {
@@ -93,18 +88,41 @@ body {
 }
 
 .form_btn {
+    cursor: pointer;
     margin-top: 3rem;
     padding: 0.5rem 1rem;
     background-color: var(--color-terciario);
     font-size: 1.1rem;
     border-radius: 5px;
     color: white;
-    transition: all 250ms ease;
+
     border: none;
 
 }
 
-.form__btn:hover {
+.mujer,
+.hombre {
+    display: flex;
+    gap: 1rem;
+}
+
+.mujeryhombre {
+    display: flex;
+    gap: 1rem;
+}
+
+.form__container--tipo-comprador {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.form_btn-send {
+    transition: all 250ms ease;
+}
+
+.form_btn-send:hover {
     transform: scale(1.1);
 }
 
@@ -152,16 +170,16 @@ body {
 
 
 .label-oscuro {
-	color: var(--color-primario);
+    color: var(--color-primario);
 }
 
 .legend-oscuro {
-	color: var(--color-primario);
+    color: var(--color-primario);
 }
 
 .input-oscuro {
-	background-color: black;
-	color: var(--color-primario);
+    background-color: black;
+    color: var(--color-primario);
 }
 
 .select-oscuro {
@@ -169,10 +187,39 @@ body {
     color: var(--color-primario);
 }
 
-.error {
-    font-size: 1.5rem;
-    color: red;
+
+
+.alerta {
+    display: none;
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    text-align: center;
+    padding: 1rem;
+    color: white;
+    width: 100%;
+    margin: 0 auto;
+    border-radius: 10px;
+    margin-bottom: 1.5rem;
 }
+
+.alerta.error {
+    display: block;
+    background-color: rgb(168, 0, 0);
+}
+
+.alerta.exito {
+    display: block;
+    background-color: rgb(0, 110, 0);
+}
+
+.form__container-top {
+    display: grid;
+    grid-template-columns: 90px 1fr;
+    align-items: center;
+    gap: 1rem;
+}
+
+
 
 @media (min-width: 1200px) {
 
@@ -204,5 +251,10 @@ body {
 
     .form_btn {
         margin: 0;
+    }
+
+    .alerta {
+        font-size: 1.8rem;
+        width: 40%;
     }
 }
